refact : 게시글 목록 조회용 DTO 분리